--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "@testing-library/user-event": "^7.1.2",
     "crypto-js": "^4.0.0",
     "firebase": "^7.14.2",
+    "nanoid": "^3.1.3",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.4.1",
+    "styled-components": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
